# PDGeolab

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-check.yml
cmake/: assimp.cmake  glfw.cmake  glm.cmake  openmesh.cmake  tinyobjloader.cmake
resources/models/backpack/: backpack.mtl
resources/shaders/: line.geom  simple.frag  simple.vert
src/: cmake_vars.h  cmake_vars.h.in  glsupport.cc  glsupport.h  main.cc  resource_path_searcher.cc  resource_path_searcher.h
